<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/introductionHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/introductionParagraph"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/requirementHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/reqirementParagraph"/>
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/featureSendHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/featureSendParagraph"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/featureScheduleHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/featureScheduleParagraph"/>
            
            
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/featureSettingHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/featureSettingParagraph"/>   
                              
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/CautionHeading"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" 
                android:layout_marginRight="10dp"               
                android:text="@string/CautionParagraph"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactDetail"
                android:textStyle="bold"
                android:textSize="15sp"/>
         </LinearLayout>
                        
  </ScrollView>