<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">    
   <FrameLayout android:id="@+id/frame_container" 
       android:layout_width="wrap_content" 
       android:layout_height="match_parent" >      
       <LinearLayout 
           android:layout_width="fill_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">  		   
	       <LinearLayout 
	           android:layout_width="fill_parent" 
	           android:layout_height="50dp"  
	           android:gravity="center">
		        <ImageButton
		            android:id="@+id/default_gateway"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/stngcd"
		            android:onClick="setDefaultGateway"
		            android:src="@drawable/list_item_icon" />		
		        <ImageButton
		            android:id="@+id/bgroup"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dp"
		            android:contentDescription="@string/gcd"
		            android:onClick="selectGroupContact"
		            android:src="@drawable/group_icon" />
		        <ImageButton
		            android:id="@+id/bcontact"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dp"
		            android:contentDescription="@string/ccd"
		            android:onClick="selectContact"
		            android:src="@drawable/contacts_icon" />		
		        <ImageButton
		            android:id="@+id/bsend"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="right"
		            android:layout_marginLeft="20dp"
		            android:contentDescription="@string/sndcd"
		            android:onClick="sendSMS"
		            android:paddingRight="10dp"
		            android:src="@drawable/send_icon" />	        
    		</LinearLayout>
        
	        <LinearLayout 
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content" >	
		        <TextView
		            android:id="@+id/textView1"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/to" />		
		        <EditText
		            android:id="@+id/etcontact"
		            android:layout_width="match_parent"
		            android:layout_height="60dp"
		            android:hint="@string/etcontacthint" />		        
	        </LinearLayout>       
	        <ScrollView 
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content" >		
		        <EditText
		            android:id="@+id/etmessage"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="top"
		            android:hint="@string/etmessagehint"
		            android:maxHeight="100dp" />
	    	</ScrollView>           
		   <TextView android:id="@+id/main_message_tv"
		        android:layout_width="wrap_content"
		      	android:layout_height="wrap_content"/>
	       <ListView
		        android:id="@+id/main_message_list"               
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:dividerHeight="20dp"/>    	               
       </LinearLayout>             
   </FrameLayout>   
   <ListView
        android:id="@+id/slider_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="0dp" />         
</android.support.v4.widget.DrawerLayout>